--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,8 @@
         
         <activity
             android:name="com.kvs.kvssamples.Splash"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
