--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,16 @@
         </activity>
         
         <activity
+            android:name="com.kvs.kvssamples.SQLView"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.kvs.kvssamples.SQLView" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        <activity
             android:name="com.kvs.kvssamples.TextPlay"
             android:label="@string/app_name" >
         </activity>
@@ -110,7 +120,7 @@
             android:label="@string/app_name">
         </activity>
         <activity
-            android:name="com.kvs.kvssamples.SQLView"
+            android:name="com.kvs.kvssamples.TestDatabaseActivity"
             android:label="@string/app_name">
         </activity>
     </application>
