--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -126,6 +126,11 @@
             android:name="com.kvs.kvssamples.TestDatabaseActivity"
             android:label="@string/app_name">
         </activity>
+        
+        <activity
+            android:name="com.kvs.kvssamples.ListViewWithDB"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
